# nfScout9029

./: .env.deploy.example  .env.example  .gitignore  Caddyfile  KULLANIM_KILAVUZU.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  schema.sql
backend/app/: db.py  main.py  models.py  schemas.py  services.py
backend/app/tests/: test_api.py
backend/frc_rebuilt_scouting_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: jsonb_merge_test.sql
frontend/: cypress.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/cypress/e2e/: offline.spec.cy.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.jsx  adminConfig.js  api.js  config.js  main.jsx  qr.js  storage.js  strategyAI.js  styles.css  sync.js  teamAnalytics.js  warRoomEngine.js
frontend/src/components/: AdminPanel.jsx  AutonomousPathCanvas.jsx  EyesFreeTerminal.jsx  FieldSetupTool.jsx  PitScoutPanel.jsx  QrImportModal.jsx  StrategyDashboard.jsx  TeamProfileModal.jsx  TeleopTracker.jsx  TestDataPanel.jsx  UserManual.jsx  VideoScoutPanel.jsx  WarRoomDashboard.jsx
frontend/src/utils/: coords.js
tools/: division_notifier.env.example  division_notifier.py  install_division_notifier.sh  nf-division-notifier.service
