[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frc-rebuilt-scouting-backend"
version = "0.1.0"
description = "FastAPI backend for FRC 2026 REBUILT scouting"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app/tests"]
